--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "dotenv": "8.2.0",
     "nuxt": "^2.14.12",
-    "vue-class-component": "7.2.6"
+    "vue-class-component": "7.2.6",
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
